hw02-configuration Add correct answer to resource, and litle refactoring